# cpp-cmake-starter

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
include/: request_builder.h  uds_constants.h
include/bar/: bar.h
include/foo/: foo.h
src/: CMakeLists.txt  main.cpp
src/bar/: CMakeLists.txt  bar.cpp
src/foo/: CMakeLists.txt  CMakelists.txt  InnerFoo.cpp  InnerFoo.h  foo.cpp
test/: CMakeLists.txt
test/bar/: CMakeLists.txt  bar_test.cpp
test/foo/: CMakeLists.txt  foo-test.cpp  foo_test.cpp
